<resources>
    <string name="app_name" translatable="false">Survive The Day</string>
    <string name="app_owner" translatable="false">Kevin Riedl</string>
    <string name="app_owner_mail" translatable="false">kevin.riedl.privat@gmail.com</string>
    <string name="app_version_label">App-Version: </string>
    <string name="spotlight_modifyCountdownActivity_target_startDateTimeIcon_title">When does it start?</string>
    <string name="spotlight_modifyCountdownActivity_target_startDateTimeIcon_description">When does your unpleasant activity start? Click here to set a timestamp.</string>
    <string name="spotlight_modifyCountdownActivity_target_untilDateTimeIcon_title">When is it over?</string>
    <string name="spotlight_modifyCountdownActivity_target_untilDateTimeIcon_description">By clicking here you can set the end of your unpleasant activity.</string>
    <string name="spotlight_modifyCountdownActivity_target_exampleHelpBtn_title">Any questions?</string>
    <string name="spotlight_modifyCountdownActivity_target_exampleHelpBtn_description">Do you need help? Just click on one of these question marks and you will receive a short explanation.</string>
    <string name="spotlight_modifyCountdownActivity_target_categoryNotificationColor_title">Don\'t you like blue?</string>
    <string name="spotlight_modifyCountdownActivity_target_categoryNotificationColor_description">Click here to change the color of the small LED lamp on your phone. By default all motivating notifications will have a blue-blinking color.</string>
    <string name="spotlight_modifyCountdownActivity_target_isActive_title">Get motivated!</string>
    <string name="spotlight_modifyCountdownActivity_target_isActive_description">By turning this option on you will receive motivating quotes or time-based notifications (such as \'Only 50 minutes to go!\')</string>
    <string name="spotlight_modifyCountdownActivity_target_showLiveCountdown_title">Do you need pressure?</string>
    <string name="spotlight_modifyCountdownActivity_target_showLiveCountdown_description">To get e.g. your bachelor thesis done you can activate the live countdown, which will print the remaining time in your notification bar.</string>
    <string name="title_activity_credits">Credits</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_modify_countdown">Create/Edit a countdown</string>
    <string name="title_activity_countdown_motivation">Become motivated</string>
    <string name="actionBar_mainActivity_menu_addNewCountdown">Add new</string>
    <string name="actionBar_mainActivity_menu_deleteAllCountdowns">Delete all</string>
    <string name="actionBar_mainActivity_menu_removeAdsTemporarily">Remove Ads temporary</string>
    <string name="actionBar_mainActivity_menu_showInAppProducts">In-App-Products</string>
    <string name="actionBar_modifyCountdownActivity_menu_showSpotlightHelp">Help me</string>
    <string name="share_postfix_appreference">[Provided by Survive The Day (downloadable on Playstore: https://play.google.com/store/apps/details?id=kevkevin.wsdt.tagueberstehen )]</string>
    <string name="share_livecountdown_text_expired">%1$s - It\'s over! I got it.</string>
    <string name="share_livecountdown_text_running">%1$s - My personal countdown: %2$s</string>
    <string name="actionBar_countdownActivity_menu_shareCountdown_title">Share</string>
    <string name="actionBar_countdownActivity_menu_shareCountdown_shareContent_text">The moment you just have %1$s seconds for %2$s (%3$s)! Do you also need motivation? SurviveTheDay is now available on Playstore for free!</string>
    <string name="actionBar_countdownActivity_menu_shareCountdown_shareContent_text_extended">The moment you just have %1$s hours or %2$s minutes or %3$s seconds for %4$s (%5$s)! Do you also need motivation? SurviveTheDay is now available on Playstore for free!</string>
    <string name="button_save">Save</string>
    <string name="button_abort">Abort</string>
    <string name="underConstruction_countdownActivity_countdownData_shareQuotes_titleLbl">Still under construction</string>
    <string name="underConstruction_countdownActivity_countdownData_shareQuotes_descriptionLbl">In future you might be able to share quotes :)</string>
    <string name="error_title_systemError">System error</string>
    <string name="error_missingData_noUserLibraryLanguagePacksInstalled">No userlibraries with installed languagepacks found.</string>
    <string name="error_contactAdministrator">Operation failed. Please contact administrator.</string>
    <string name="error_noInternetConnection">Please check your internet connection!</string>
    <string name="error_notFound_short">Unknown</string>
    <string name="nodeTemplate_motivateMeBtn_contentDescription">MotivateMeToggle is used to turn motivational notifications on.</string>
    <string name="nodeTemplate_editBtn_contentDescription">Edit-Button is used to modify an existing countdown.</string>
    <string name="nodeTemplate_deleteBtn_contentDescription">Delete-Button is used to delete an existing countdown.</string>
    <string name="nodeTemplate_openCountdownBtn_contentDescription">Open-Button is used to calculate/open the current countdown.</string>
    <string name="nodeTemplate_eventMsg_icon_error_contentDescription">Error-Icon when message was not set.</string>
    <string name="countdownActivity_countdownData_pauseRandomQuoteToggle_contentDescription">This button is used to pause/play the random quote generator.</string>
    <string name="countdownActivity_countdownData_refreshRandomQuote_contentDescription">This button is used to show a new random quote, before it is automatically refreshed.</string>
    <string name="countdownActivity_inAppNotification_notificationIcon_contentDescription">This image shows the same icon, as it has been shown in the notification bar.</string>
    <string name="countdownActivity_inAppNotification_close_contentDescription">This button is used to close the showed inappnotification, before it is removed automatically.</string>
    <string name="modifyCountdownActivity_datetime_calendar_contentDescription">This icon should increase usability by pointing out that we want to know a date and time.</string>
    <string name="generic_help_contentDescription">This button usually shows a short help message.</string>
    <string name="helptext_error_nohelptextfound">Sorry, I have no advice for you here. :(</string>
    <string name="inappnotification_preventmultiple_closeothermsgorwait">It seems that I am showing already a helptext for you. Please be so kind and close it or wait until it\'s gone.</string>
    <string name="generic_help_inappnotification_default_title">Help is here</string>
    <string name="modifyCountdownActivity_countdown_category_helptext">Color will be used e.g. for notifications (led-color, &#8320;)</string>
    <string name="modifyCountdownActivity_countdown_motivateMe_helptext">When activated this app will issue, in selected intervals, motivating notifications.</string>
    <string name="modifyCountdownActivity_countdown_motivateMe_interval_helptext">Choose a interval for the notifications to show up. Short intervals (e.g. 5 seconds) might not execute on point (battery-saving).</string>
    <string name="modifyCountdownActivity_countdown_motivateMe_languagepacks_helptext">Many users understand more than only language. Consequently, we allow you to select possible languages of our random quotes.</string>
    <string name="modifyCountdownActivity_countdown_liveCountdown_helptext">By activating this, we will show you a steady notification with your countdown.</string>
    <string name="settingsActivity_saveBattery_helptext">When activated notifications might not show up on-time. Your battery will hold longer.</string>
    <string name="settingsActivity_durationOfInAppNotifications_helptext">The higher the no. (labelled in seconds) the longer an in-app-notification will be displayed on screen. This text is also displayed in an in-app-notification. Try it.</string>
    <string name="mainActivity_swipeLayout_topMenu_openCountdown_text">Open countdown</string>
    <string name="mainActivity_swipeLayout_onClickInstruction">Swipe left or right for options.</string>
    <string name="mainActivity_swipeRefreshLayout_pulledDown_refreshDone">Refreshed displayed content and restarted notification services.</string>
    <string name="mainActivity_noCountdownsFound">No countdowns found.</string>
    <string name="mainActivity_deletedCountdown">Deleted countdown.</string>
    <string name="mainActivity_deletedAllCountdowns">Deleted all countdowns.</string>
    <string name="mainActivity_countdownMotivationToggleOnOff">Countdown motivation got %1$s.</string>
    <string name="mainActivity_countdownMotivationToggleOnOff_activated">activated</string>
    <string name="mainActivity_countdownMotivationToggleOnOff_deactivated">deactivated</string>
    <string name="mainActivity_countdownNode_error_nodeTagWrongBuild">Could not perform action. Node maybe wrong build.</string>
    <string name="mainActivity_countdownNode_delete_warningDialog_title">Delete countdown?</string>
    <string name="mainActivity_countdownNode_delete_warningDialog_description">By clicking \'Delete\' your countdown will be deleted. This action can\'t be undone!</string>
    <string name="mainActivity_countdownNode_deleteAll_warningDialog_title">Delete all countdowns?</string>
    <string name="setting_saveBattery_title">Save battery</string>
    <string name="setting_durationOfInAppNotifications_title">Duration of In-App-Notifications</string>
    <string name="countdownActivity_inAppNotification_error404_title">System error</string>
    <string name="countdownActivity_inAppNotification_error404_description">Please report this issue to the system administrator.</string>
    <string name="creditsActivity_writeUs"> Got something on your mind? \n
                                            Just Write us!</string>
    <string name="creditsActivity_creditProgrammersAndAllOthers">
        <b>Programming \n\n</b>
        "© Riedl Kevin, 2018 \n"
        "Business: <a href='mailto:kevin.riedl.privat@gmail.com'>kevin.riedl.privat@gmail.com</a>\n"
        "© Jori Christof, 2018 \n"
        "Business: <a href='mailto:cjori49@gmail.com'>cjori49@gmail.com</a>\n\n"
    </string>
    <string name="creditsActivity_creditSourcesAndAuthors">
        <ans>
        <![CDATA[
        Special thanks to following external authors:
        1.: Generic quotes from  <a href="www.briantracy.com/blog/personal-success/26-motivational-quotes-for-success"> Briantracy.com, Motivational quotes </a> (last seen: 2018/01/06)
        2.: Generic quotes from  <a href="https://www.brainyquote.com/topics/inspirational">Brainyquote.com, Inspirational Quotes</a> (last seen: 2018/01/06)<br /> \n
        3.: German proverbs from <a href="https://www.fluentu.com/blog/german/learn-german-proverbs/">Fluentu.com, German proverbs</a> (last seen: 2018/02/18)<br /> \n
        4.: Generic quotes from  <a href="http://zitate.net">Zitate.net</a> (last seen: 2018/02/18)<br /><br /> \n
]]>
        </ans>
    </string>
    <string name="creditsActivity_creditOther">..</string>
    <string name="creditsActivity_engagement">
        "<b>Searching contributors!</b>\n\n"
        "We're still seeking for members, if you're interested don't hesitate contacting us! :-)</string>
    <string name="greeting3">Glad your´re back %1$s, feeling good? </string>
    <string name="top"> Today is my Day!</string>
    <string name="fine"> Feeling fine!</string>
    <string name="good"> Can´t complain!</string>
    <string name="mhm"> Yeah, whatever</string>
    <string name="bad"> Not really satisfied</string>
    <string name="worse"> Nah thanks, bring in tomorrow</string>
</resources>