<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActionbar"
    tools:context="kevkevin.wsdt.tagueberstehen.MainActivity">

    <item
        android:id="@+id/action_addCountdown"
        android:orderInCategory="0"
        android:icon="@drawable/light_add"
        android:title="@string/actionBar_mainActivity_menu_addNewCountdown"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_removeAllCountdowns"
        android:orderInCategory="1"
        android:icon="@drawable/light_delete"
        android:title="@string/actionBar_mainActivity_menu_deleteAllCountdowns"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_showInAppProducts"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/actionBar_mainActivity_menu_showInAppProducts"/>
    <item
        android:id="@+id/action_removeAdsTemporary"
        android:orderInCategory="3"
        android:title="@string/actionBar_mainActivity_menu_removeAdsTemporarily"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:title="@string/title_activity_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_credits"
        android:orderInCategory="100"
        android:title="@string/title_activity_credits"
        app:showAsAction="never" />
</menu>
